--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -70,7 +70,7 @@ jobs:
       id: create_release
       uses: actions/create-release@latest
       env:
-        GITHUB_TOKEN: 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
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: v${{ env.app_version }}
         release_name: v${{ env.app_version }}
@@ -80,7 +80,7 @@ jobs:
     - name: Upload release asset
       uses: dwenegar/upload-release-assets@v1
       env:
-        GITHUB_TOKEN: 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
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         release_id: ${{ steps.create_release.outputs.id }}
         assets_path: |
